Fix banner overlap issue on mobile

--- a/src/templates/index.module.scss
+++ b/src/templates/index.module.scss
@@ -149,7 +149,13 @@
 
   @media only screen and (max-width: 900px) {
     .header {
-      margin-top: 0;
+      // margin-top: 0;
+      margin-top: 120px;
+    }
+
+    .toast {
+      height: 120px;
+      padding: 0 24px;
     }
 
     .title {
